--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     color: #fff;
 }
 
+
 #secPrincipal {
     margin-top: 20px;
 }
@@ -15,6 +16,7 @@
 h1 {
     font-size: 24px;
     margin-bottom: 20px;
+    text-align: center; 
 }
 
 
